[校对][news]lindroid

--- a/sources/news/20240618-lindroid.md
+++ b/sources/news/20240618-lindroid.md
@@ -5,8 +5,8 @@ author:
   - fosscope-translation-team
   - Fisherman110
   - void-mori
-banner: https://news.itsfoss.com/content/images/size/w1304/format/webp/2024/06/run-linux-in-android.png
-cover: https://news.itsfoss.com/content/images/size/w1304/format/webp/2024/06/run-linux-in-android.png
+banner: https://static.fosscope.com/articles_img/2024/06/lindroid/banner-run-linux-in-android.png
+cover: https://static.fosscope.com/articles_img/2024/06/lindroid/cover-run-linux-in-android.png
 categories:
   - 翻译
   - news
@@ -32,13 +32,13 @@ Linux能够以各种形式和规模运行，这是毋庸置疑的
 
 毫无疑问，安卓是世界上最流行的开源操作系统。（对不住了，arch用户）安卓使用高度定制的Linux内核给用户提供了良好的智能手机使用体验。
 
-当然，并非每个人都喜欢谷歌概念下的安卓操作系统，他们还有LineageOS, CalyxOS等谷歌系列以外的系统可以选择。
+当然，并非每个人都喜欢谷歌概念下的安卓操作系统，他们还有 LineageOS，CalyxOS 等谷歌系列以外的系统可以选择。
 
-然而，在最近的一份声明中。Erfan Abdi 和 Luka Panio 两位开发者介绍了一个叫做 Lindroid 的有趣项目。这个项目致力于让用户可以在安卓设备上用一种新方式运行Linux。
+然而，在最近的一份声明中，Erfan Abdi 和 Luka Panio 两位开发者介绍了一个叫做 Lindroid 的有趣项目。这个项目致力于让用户可以在安卓设备上用一种新方式运行Linux。
 
 ## Lindroid项目：有哪些东西值得期待？
 
-![小米6平板上通过lindroid运行debian12的截图](https://news.itsfoss.com/content/images/size/w1000/2024/06/Lindroid_a.jpeg)
+![小米6平板上通过lindroid运行debian12的截图](https://static.fosscope.com/articles_img/2024/06/lindroid/run-linux-in-android-1.png)
 
 通过这个项目，用户可以在他们的安卓系统上使用本地硬件运行各式各样的Linux发行版 。开发者Erfan称呼这个项目为：“逆向安卓模拟器”（即在安卓模拟PC操作系统）
 
@@ -53,13 +53,13 @@ Lindroid默认的图形界面是KWin,Wayland默认启用，对X11的支持还在
 
 他也展示了许多令人印像深刻的Lindroid特性。比如说多源输入和多屏显示支持。
                                                                        
-![展示Lindroid的多屏显示和多源输入特性的视频](https://news.itsfoss.com/content/images/2024/06/Lindroid_b.gif)
+![展示Lindroid的多屏显示和多源输入特性的视频](https://static.fosscope.com/articles_img/2024/06/lindroid/run-linux-in-android-2.gif)
 
 这个视频展示了切屏显示是毫不费力的，移动过程中毫无延迟。他补充道，这项功能和安卓的多屏模式是适配的，多屏模式在即将到来的安卓15发布版中会得到改进。
 
 你可能会好奇，在Lindroid运行软件是否可行？
 
-开发者通过实现硬件加速确保了它（Lindroid）在运行软件方面也毫不逊色。这是通过使用libhybris库来调用宿主机的EGL和硬件混合渲染来实现的。
+开发者通过实现硬件加速确保了它（Lindroid）在运行软件方面也毫不逊色。这是通过使用 libhybris 库来调用宿主机的EGL和硬件混合渲染来实现的。
 
 当被问到Wine能否在这上面运行的时候， Erfan补充道，他还没有测试Wine,但是他继续不久之后进行测试，他会尝试建立GL（存疑？）来确保Wine和Proton的适配性。
 
@@ -84,4 +84,4 @@ Lindroid默认的图形界面是KWin,Wayland默认启用，对X11的支持还在
 
 如果你想要参与开发或者了解工程进度的话，你可以访问这个工程的GitHub页面。
                                                                        
-[Lindroid(GitHub)](https://github.com/linux-on-droid/)                                                                     
+[Lindroid(GitHub)](https://github.com/linux-on-droid/)
