--- a/published/2024-06/20240618-lindroid.md
+++ b/published/2024-06/20240618-lindroid.md
@@ -65,7 +65,7 @@ Lindroid 默认的图形界面是 [KWin](https://en.wikipedia.org/wiki/KWin)，*
 
 当被 [问到](https://x.com/stashyymane/status/1802419147961254322) Wine 能否在这上面运行的时候，Erfan 补充道，他还没有测试 Wine，但是他继续不久之后将进行测试，他会 [尝试](https://x.com/4k_isn/status/1802364478803296729) 建立 GL 来确保 Wine 和 Proton 的兼容性。
 
-他也 展示了](https://x.com/Khode_Erfan/status/1802331901933334839) Lindroid 在例如Ubuntu Touch ([Lomiri](https://lomiri.com/)), Droidian ([Phosh](https://github.com/droidian/phosh)), 和 [Plasma Mobile](https://plasma-mobile.org/) 这样的发行版上面运行的情况。
+他也 [展示了](https://x.com/Khode_Erfan/status/1802331901933334839) Lindroid 在例如Ubuntu Touch ([Lomiri](https://lomiri.com/)), Droidian ([Phosh](https://github.com/droidian/phosh)), 和 [Plasma Mobile](https://plasma-mobile.org/) 这样的发行版上面运行的情况。
 
 如果你迫切想要了解更多关于这个炫酷项目的信息，你可以参考 [X 频道](https://x.com/Khode_Erfan/status/1802331845633212554) 以及 [Luka 在 Volla Community Days 的演说](https://www.youtube.com/live/7vF5647gNbo?si=q5mxoLeEhhlTC5ew&t=14460)（位于 4:01:00），他在这场演说中回答了很多观众提出的有趣问题。
 
