--- a/published/2024-06/20240618-lindroid.md
+++ b/published/2024-06/20240618-lindroid.md
@@ -41,7 +41,7 @@ Linux 能够以各种形式和规模运行，这是毋庸置疑的
 
 ## Lindroid项目：有哪些东西值得期待？
 
-![小米6平板上通 Llindroid 运行 Debian 12 的截图](https://static.fosscope.com/articles_img/2024/06/lindroid/run-linux-in-android-1.png)
+![小米6平板上通过 Llindroid 运行 Debian 12 的截图](https://static.fosscope.com/articles_img/2024/06/lindroid/run-linux-in-android-1.png)
 
 通过这个项目，用户可以在他们的安卓系统上使用原生硬件运行各式各样的 Linux 发行版 。开发者 Erfan 称呼这个项目为：*「逆向安卓模拟器」*。
 
