--- a/published/2024-06/20240618-lindroid.md
+++ b/published/2024-06/20240618-lindroid.md
@@ -61,7 +61,7 @@ Lindroid 默认的图形界面是 [KWin](https://en.wikipedia.org/wiki/KWin)，*
 
 你可能会好奇，**在 Lindroid 运行软件是否可行**？
 
-开发者通过**实现硬件加速**确保了 Lindroid 在运行软件方面也毫不逊色。这是通过 *「使用 [libhybris](https://github.com/libhybris/libhybris) 库来调用宿主机的 [EGL](https://en.wikipedia.org/wiki/EGL_(API)) 和 [硬件混合渲染](https://source.android.com/docs/core/graphics/hwc) 来实现的」。
+开发者通过**实现硬件加速**确保了 Lindroid 在运行软件方面也毫不逊色。这是通过 *「使用 [libhybris](https://github.com/libhybris/libhybris) 库来调用宿主机的 [EGL](https://en.wikipedia.org/wiki/EGL_(API)) 和 [硬件混合渲染](https://source.android.com/docs/core/graphics/hwc) 来实现的」*。
 
 当被 [问到](https://x.com/stashyymane/status/1802419147961254322) Wine 能否在这上面运行的时候，Erfan 补充道，他还没有测试 Wine，但是他继续不久之后将进行测试，他会 [尝试](https://x.com/4k_isn/status/1802364478803296729) 建立 GL 来确保 Wine 和 Proton 的兼容性。
 
