--- a/sources/tech/20240706-ollama.md
+++ b/sources/tech/20240706-ollama.md
@@ -3,7 +3,7 @@ title: What is Ollama? Everything Important You Should Know
 date: <发布时间>
 author:
   - fosscope-translation-team
-  - <译者ID>
+  - excniesnied
   - <校对者ID>
 banner: https://static.fosscope.com/articles_img/2024/07/ollama/everything-about-ollama.webp
 cover: https://static.fosscope.com/articles_img/2024/07/ollama/everything-about-ollama.webp
@@ -17,7 +17,7 @@ authorInfo: |
 
   作者：[Ankush Das](https://itsfoss.com/author/ankush/)
   选题：[白鼠Cysnies](https://github.com/cys2004)
-  译者：[<译者ID>](https://github.com/<译者ID>)
+  译者：[excniesnied](https://github.com/excniesnied)
   校对：[<校对者ID>](https://github.com/<校对者ID>)
 
   本文由 [FOSScope翻译组](https://github.com/FOSScope/TranslateProject) 原创编译，[开源观察](https://fosscope.com/) 荣誉推出
