[选题][news] Ubuntu 24.04 LTS Can Now Do What It Should Have Always Done

--- a/sources/news/20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md
+++ b/sources/news/20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md
@@ -33,7 +33,7 @@ And, we had a strong opinion about it (like every user should):
 
 {% link https://news.itsfoss.com/ubuntu-24-04-disappointment/ %}
 
-**Do not get me wrong:** we also [reviewed Ubuntu 24.04 LTS](https://itsfoss.com/ubuntu-24-04-lts-review/?ref=news.itsfoss.com) as a near-perfect upgrade. So, we did not hate it entirely, but were furious about this particular decision:
+**Do not get me wrong:** we also [reviewed Ubuntu 24.04 LTS](https://itsfoss.com/ubuntu-24-04-lts-review/) as a near-perfect upgrade. So, we did not hate it entirely, but were furious about this particular decision:
 
 [![ubuntu 24.04 lts deb package install error](https://news.itsfoss.com/content/images/2024/07/ubuntu24-deb-error.png)](https://news.itsfoss.com/content/images/2024/07/ubuntu24-deb-error.png)
 
@@ -41,7 +41,7 @@ While that garnered a lot of support and criticism, it looks like Canonical list
 
 ## Install .Deb Packages Using the App Center 🥳
 
-Of course, it was not just our voice about it, but one of the users [raised the issue on GitHub](https://github.com/ubuntu/app-center/pull/1681?ref=news.itsfoss.com) requesting the functionality before Ubuntu 24.04 LTS release.
+Of course, it was not just our voice about it, but one of the users [raised the issue on GitHub](https://github.com/ubuntu/app-center/pull/1681) requesting the functionality before Ubuntu 24.04 LTS release.
 
 It was being discussed upon, but did not make it to the Ubuntu 24.04 LTS release. Recently, it was merged to the App Center and is finally available to everyone!
 
@@ -65,6 +65,6 @@ There is still a missing feature, though: **you cannot manage the deb packages u
 
 I know, we, humans, are never satisfied 😉 But, it is what it is!
 
-So, if you want to manage the deb packages, the [Synaptic Package Manager](https://itsfoss.com/synaptic-package-manager/?ref=news.itsfoss.com) should help.
+So, if you want to manage the deb packages, the [Synaptic Package Manager](https://itsfoss.com/synaptic-package-manager/) should help.
 
 *💭 What do you think about this small refinement to Ubuntu 24.04 LTS for the App Center? Let me know your thoughts!*
