--- a/sources/news/20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md
+++ b/sources/news/20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md
@@ -3,7 +3,7 @@ title: Ubuntu 24.04 LTS Can Now Do What It Should Have Always Done
 date: {{release_date}}
 author:
   - fosscope-translation-team
-  - {{translator}}
+  - excniesNIED
   - {{proofreader}}
 banner: https://news.itsfoss.com/content/images/size/w1304/format/webp/2024/07/ubuntu-appcenter-debian.png
 cover: https://news.itsfoss.com/content/images/size/w1304/format/webp/2024/07/ubuntu-appcenter-debian.png
@@ -17,7 +17,7 @@ authorInfo: |
 
   作者：[Ankush Das](https://news.itsfoss.com/author/ankush/)
   选题：[excniesnied](https://github.com/excniesNIED)
-  译者：[{{translator}}](https://github.com/{{translator}})
+  译者：[excniesnied](https://github.com/excniesNIED)
   校对：[{{proofreader}}](https://github.com/{{proofreader}})
 
   本文由 [FOSScope翻译组](https://github.com/FOSScope/TranslateProject) 原创编译，[开源观察](https://fosscope.com/) 荣誉推出
