fix URL: translated\news\20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md

--- a/translated/news/20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md
+++ b/translated/news/20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md
@@ -33,7 +33,7 @@ authorInfo: |
 
 {% link https://news.itsfoss.com/ubuntu-24-04-disappointment/ %}
 
-**不要误会我的意思：**我们还 [把 Ubuntu 24.04 LTS 视为近乎完美的升级](https://itsfoss.com/ubuntu-24-04-lts-review/?ref=news.itsfoss.com)。所以，我们并不完全讨厌它，而是对这个特定的决定感到愤怒：
+**不要误会我的意思：**我们还 [把 Ubuntu 24.04 LTS 视为近乎完美的升级](https://itsfoss.com/ubuntu-24-04-lts-review)。所以，我们并不完全讨厌它，而是对这个特定的决定感到愤怒：
 
 [![ubuntu 24.04 lts deb package install error](https://news.itsfoss.com/content/images/2024/07/ubuntu24-deb-error.png)](https://news.itsfoss.com/content/images/2024/07/ubuntu24-deb-error.png)
 
