Add `abbrlink` and related requirements
Signed-off-by: Qian Qian "Cubik"‎ <cubik65536@cubik65536.top>

--- a/published/2024-05/20240330-tailspin.md
+++ b/published/2024-05/20240330-tailspin.md
@@ -1,6 +1,7 @@
 ---
 title: '使用 Tailspin 带高亮地查看日志文件'
 date: 2024-05-18 12:34:49
+abbrlink: ca54e9c1
 author:
   - fosscope-translation-team
   - cys2004
