--- a/published/2024-06/20240618-lindroid.md
+++ b/published/2024-06/20240618-lindroid.md
@@ -1,22 +1,21 @@
 ---
 title: 在安卓系统上以软件的形式运行 Linux
 date: 2024-06-26 3:35:28
+abbrlink: dd84ce49
 author:
   - fosscope-translation-team
   - Fisherman110
   - void-mori
   - Cubik65536
-banner: >-
-  https://static.fosscope.com/articles_img/2024/06/lindroid/banner-run-linux-in-android.png
-cover: >-
-  https://static.fosscope.com/articles_img/2024/06/lindroid/cover-run-linux-in-android.png
+banner: https://static.fosscope.com/articles_img/2024/06/lindroid/banner-run-linux-in-android.png
+cover: https://static.fosscope.com/articles_img/2024/06/lindroid/cover-run-linux-in-android.png
 categories:
   - 翻译
   - 新闻
 tags:
   - Linux
   - Android
-authorInfo: >
+authorInfo: |
   via: https://news.itsfoss.com/lindroid/
 
   作者：[Sourav Rudra](https://news.itsfoss.com/author/sourav/)
