--- a/published/2024-07/20240706-ollama.md
+++ b/published/2024-07/20240706-ollama.md
@@ -1,6 +1,7 @@
 ---
 title: 什么是 Ollama？您需要了解的所有重要事项
 date: 2024-07-12 08:51:17
+abbrlink: 646f8228
 author:
   - fosscope-translation-team
   - excniesnied
@@ -20,9 +21,7 @@ authorInfo: >
   译者：[excniesnied](https://github.com/excniesnied)
   校对：[Cubik65536](https://github.com/Cubik65536)
 
-  本文由 [FOSScope翻译组](https://github.com/FOSScope/TranslateProject)
-  原创编译，[开源观察](https://fosscope.com/) 荣誉推出
-abbrlink: 646f8228
+  本文由 [FOSScope翻译组](https://github.com/FOSScope/TranslateProject) 原创编译，[开源观察](https://fosscope.com/) 荣誉推出
 ---
 
 回答有关 Ollama 的常见问题。
