Replace Static Resources Site
Signed-off-by: Qian Qian "Cubik"‎ <cubik65536@cubik65536.top>

--- a/translated/news/20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md
+++ b/translated/news/20240715-ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done.md
@@ -3,10 +3,10 @@ title: Ubuntu 24.04 LTS 现在可以做它一直应该做的事了
 date: {{release_date}}
 author:
   - fosscope-translation-team
-  - excniesNIED
+  - excniesnied
   - {{proofreader}}
-banner: https://news.itsfoss.com/content/images/size/w1304/format/webp/2024/07/ubuntu-appcenter-debian.png
-cover: https://news.itsfoss.com/content/images/size/w1304/format/webp/2024/07/ubuntu-appcenter-debian.png
+banner: https://static.fosscope.com/articles_img/2024/08/ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done/ubuntu-appcenter-debian.webp
+cover: https://static.fosscope.com/articles_img/2024/08/ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done/ubuntu-appcenter-debian.webp
 categories:
   - 翻译
   - 新闻
@@ -27,15 +27,15 @@ authorInfo: |
 
 <!-- more -->
 
-您可能不知道，我们对 Ubuntu 24.04 LTS 的一些缺点感到非常失望，例如无法使用 App Center 安装 .deb 文件。
+您可能不知道，我们对 Ubuntu 24.04 LTS 的一些缺点感到非常失望，例如无法使用中心安装 .deb 文件。
 
 而且，我们对此有强烈的看法（就像每个用户应该做的那样）：
 
-{% link https://news.itsfoss.com/ubuntu-24-04-disappointment/ %}
+{% link https://news.itsfoss.com/ubuntu-24-04-disappointment/ 我对 UBUNTU 24.04 非常失望 😡 icon:https://static.fosscope.com/articles_img/2024/08/ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done/disappointed-with-ubuntu-24-04-release.webp %}
 
 **不要误会我的意思：**我们还 [把 Ubuntu 24.04 LTS 视为近乎完美的升级](https://itsfoss.com/ubuntu-24-04-lts-review)。所以，我们并不完全讨厌它，而是对这个特定的决定感到愤怒：
 
-[![ubuntu 24.04 lts deb package install error](https://news.itsfoss.com/content/images/2024/07/ubuntu24-deb-error.png)](https://news.itsfoss.com/content/images/2024/07/ubuntu24-deb-error.png)
+![ubuntu 24.04 lts deb package install error](https://static.fosscope.com/articles_img/2024/08/ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done/ubuntu24-deb-error.webp)
 
 虽然这一做法获得了很多支持和批评，但看起来 Canonical 听取了我们和许多其他同意我们想法的人的意见。
 
@@ -47,13 +47,13 @@ authorInfo: |
 
 Ubuntu（或 Canonical）没有为此发布官方公告。但是，如果您更新了 Ubuntu 24.04 LTS 系统，您会在这里看到公告：
 
-[![ubuntu 24.04 lts .deb file](https://news.itsfoss.com/content/images/2024/07/install-deb-file-ubuntu-24-04.png)](https://news.itsfoss.com/content/images/2024/07/install-deb-file-ubuntu-24-04.png)
+![ubuntu 24.04 lts .deb file](https://static.fosscope.com/articles_img/2024/08/ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done/install-deb-file-ubuntu-24-04.webp)
 
 您终于可以使用应用中心安装从互联网上下载的 .deb 文件，而无需使用终端或安装第三方图形用户界面工具来实现这一功能。
 
 只需右键点击您下载的 .deb 文件，选择「*使用应用中心打开*」，这将打开一个类似上图的窗口，让您继续操作。 如下所示：
 
-{% video https://news.itsfoss.com/content/media/2024/07/install-deb-file.webm %}
+{% video https://static.fosscope.com/articles_img/2024/08/ubuntu-24.04-lts-can-now-do-what-it-should-have-always-done/install-deb-file.webm %}
 
 当然，**它会提供必要的警告，说明这是一个第三方软件包。** 在安装任何东西（比如项目的 GitHub Release 部分）之前，您需要信任软件包的源代码。
 
